--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h1 class="title is-1 publication-title">EcoFace: Audio-Visual Emotional Co-Disentanglement Speech-Driven 3D Talking Face Generation</h1>
             <!--Github link-->
             <span class="link-block">
-              <a href="https://github.com/YOUR REPO HERE" target="_blank"
+              <a href="https://anonymous.4open.science/r/EcoFace-7A5F" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fab fa-github"></i>
