--- a/index.html
+++ b/index.html
@@ -75,6 +75,28 @@
               <span>Code</span>
             </a>
             -->
+            <!--Author list-->
+            <div class="is-size-5 publication-authors">
+              <!--Paper authors-->
+              <span class="author-block">
+                Jiajian Xie<sup>1</sup>,</span>
+              <span class="author-block">
+                Shengyu Zhang<sup>1</sup>,</span>
+              <span class="author-block">
+                Mengze Li<sup>1</sup>,</span>
+              <span class="author-block">
+                Chengfei Lv<sup>2</sup>,</span>
+              <span class="author-block">
+                Zhou Zhao<sup>1</sup>,</span>
+                  <span class="author-block">
+                    Fei Wu<sup>1</sup>
+                  </span>
+                  </div>
+
+                  <div class="is-size-5 publication-authors">
+                    <span class="author-block"><sup>1</sup>Zhejiang University,</span>
+                    <span class="author-block"><sup>2</sup>Alibaba</span>
+                  </div>
             <!--
             <div class="is-size-5 publication-authors">
               !--Paper authors--
