--- a/index.html
+++ b/index.html
@@ -63,18 +63,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
+            <h1 class="title is-1 publication-title">ICLR 2025</h1>
             <h1 class="title is-1 publication-title">EcoFace: Audio-Visual Emotional Co-Disentanglement Speech-Driven 3D Talking Face Generation</h1>
-            <!--Github link-->
-            <!--
-            <span class="link-block">
-              <a href="https://anonymous.4open.science/r/EcoFace-7A5F" target="_blank"
-              class="external-link button is-normal is-rounded is-dark">
-              <span class="icon">
-                <i class="fab fa-github"></i>
-              </span>
-              <span>Code</span>
-            </a>
-            -->
             <!--Author list-->
             <div class="is-size-5 publication-authors">
               <!--Paper authors-->
@@ -97,28 +87,11 @@
                     <span class="author-block"><sup>1</sup>Zhejiang University,</span>
                     <span class="author-block"><sup>2</sup>Alibaba</span>
                   </div>
-            <!--
-            <div class="is-size-5 publication-authors">
-              !--Paper authors--
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
-                  </div>
-
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
-
-                  <div class="column has-text-centered">
+            <div class="column has-text-centered">
                     <div class="publication-links">
-                      !--Arxiv PDF link--
+                      <!--Arxiv PDF link-->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -127,7 +100,8 @@
                       </a>
                     </span>
 
-                    !--Supplementary PDF link--
+                    <!--Supplementary PDF link-->
+	    <!--
                     <span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
@@ -137,10 +111,11 @@
                       <span>Supplementary</span>
                     </a>
                   </span>
+	   -->
 
-                  !--Github link--
+                 <!--Github link-->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -149,8 +124,9 @@
                   </a>
                 </span>
 
-                !--ArXiv abstract Link--
-                <span class="link-block">
+                <!--ArXiv abstract Link-->
+	<!--                
+	<span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -159,7 +135,7 @@
                   <span>arXiv</span>
                 </a>
               </span>
-            </div>-->
+               -->
           </div>
         </div>
       </div>
